--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:import/typescript",
+        "plugin:@typescript-eslint/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -20,6 +22,18 @@
         "immutable"
     ],
     "rules": {
-        "immutable/no-mutation": 2
+        "immutable/no-mutation": 2,
+        "arrow-parens": "off",
+        "no-plusplus": "off",
+        "semi": 0,
+        "implicit-arrow-linebreak": "off",
+        "import/extensions": [
+            "error",
+            "always",
+            {
+                "ts": "never",
+                "js": "never"
+            }
+        ]
     }
 }
